Add viewport meta tag and finished chosen recipe

--- a/dashboard.html
+++ b/dashboard.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Hold the...</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="icon" href="images/Plate.png">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400" rel="stylesheet">
 		<link rel = "stylesheet" href="styles/style.css">
@@ -26,7 +27,7 @@
 			    	</div>
 			    </div>
 			</div>
-			<div class = "content dashboard">
+			<div class = "content">
 				<div class = "welcome">
 					<h3>Hello Dale Lewis!</h3>
 					<h3>Let's create something tasty together!</h3>
@@ -73,7 +74,7 @@
 			    	<div class="top-container empty"></div>
 			    </div>
 			</div>
-			<div class = "content profile">
+			<div class = "content">
 				<div id = "profile-picture">
 					<img id = "dale" src = "images/top/Profile.png">
 				</div>
