--- a/recipes.html
+++ b/recipes.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Hold the...</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="icon" href="images/Plate.png">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400" rel="stylesheet">
 		<link rel = "stylesheet" href="styles/style.css">
@@ -31,7 +32,7 @@
 		    		</div>
 			    </div>
 			</div>
-			<div class = "content recipes-list">
+			<div class = "content">
 				<div class = "recipes">
 					<div class = "search">
 						<div class="input-container">
@@ -91,7 +92,7 @@
 		    		</a>
 			    </div>
 			</div>
-			<div class = "content filters">
+			<div class = "content">
 				<div class = "cuisine">
 					<div class = "category exp">
 						<h1>CUISINE</h1>
@@ -226,7 +227,7 @@
 			<div class="header">
 				<img id = "status-bar" src = "images/top/Status Bar.png">
 				<div class="top-bar top-border">
-			  		<a class="back link slideleft" page-load="recipes">
+			  		<a class="back link slideright" page-load="recipes">
 			  			<div class="top-container green-background breadcrumbs">
 			  				<div class = "white-overlay">
 				  				<h1>Recipes</h1>
@@ -246,7 +247,7 @@
 		    		</div>
 			    </div>
 			</div>
-			<div class = "content chosen-recipe">
+			<div class = "content">
 				<div class = "question">
 					<img src = "images/Question Mark.png">
 				</div>
