--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 	<head>
 		<title>Hold the...</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="icon" href="images/Plate.png">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:100,300" rel="stylesheet">
 		<link rel = "stylesheet" href="styles/style.css">
-		<link rel = "stylesheet" href="styles/animate.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 		<script src = "js/main.js"></script>
 	</head>
