--- a/recipes.html
+++ b/recipes.html
@@ -15,7 +15,7 @@
  		<script src="https://ricostacruz.com/jquery.transit/jquery.transit.min.js" type="text/javascript"></script>
  		<script src = "js/main.js"></script>
 	</head>
-	<body onLoad = "sliders();">
+	<body onLoad = "sliders(); editPeople(); cancel(); done(); modifyLifestyles(); warning(); substitution();">
 		<div id = "recipes" class = "sc selected">
 			<div class="header">
 				<img id = "status-bar" src = "images/top/Status Bar.png">
@@ -41,7 +41,7 @@
 						</div>
 					</div>
 					<div class="recipe-container link slideleft" page-load = "chosen-recipe" >
-			        	<img class = "recipe-image" src="images/recipes/Avocado Carbonara.png">
+			        	<img class = "recipe-image demo-choice" src="images/recipes/Avocado Carbonara.png">
 			        	<img class = "heart-outline" src = "images/Outline Heart.png">
 			       		<h5>Avocado Carbonara</h5>
 			    	</div>
@@ -226,6 +226,12 @@
 		<div id = "chosen-recipe" class = "sc">
 			<div class="header">
 				<img id = "status-bar" src = "images/top/Status Bar.png">
+				<div class = "warning">
+					<div class = "toast">
+						<img id = "fix" src = "images/Cancel - Black.png">
+						<h5>Please resolve conflicts below.</h5>
+					</div>
+				</div>
 				<div class="top-bar top-border">
 			  		<a class="back link slideright" page-load="recipes">
 			  			<div class="top-container green-background breadcrumbs">
@@ -270,6 +276,19 @@
 							<h5>35 mins</h5>
 						</div>
 					</div>
+					<div class = "edit-info-container">
+						<div class = "people-serving edit">
+							<h5>Serves <input type = "number" id = "number-served" value = "2"></input> people</h5>
+						</div>
+						<div class = "prep edit">
+							<img id = "prep-image" src = "images/Prep.png">
+							<h5>15 mins</h5>
+						</div>
+						<div class = "cooking">
+							<img id = "cooking-image" src = "images/Pot.png">
+							<h5>35 mins</h5>
+						</div>
+					</div>
 				</div>
 				<div class = "recipe-modifications">
 					<div class = "title">
@@ -285,14 +304,47 @@
 				        	<img class = "lifestyle-image modify" src="images/lifestyles/dairy free.png">
 				       		<h5>Dairy-Free</h5>
 				    	</div>
-				    	<div class="lifestyle-container modify">
+				    	<div class="lifestyle-container modify remove">
 				        	<img class = "lifestyle-image modify" src="images/lifestyles/none.png">
 				       		<h5>Tomatoes</h5>
 				    	</div>
-				    	<div class="lifestyle-container modify">
+				    	<div class="lifestyle-container modify remove">
 				        	<img class = "lifestyle-image modify" src="images/lifestyles/none.png">
 				       		<h5>Peppers</h5>
 				    	</div>
+					</div>
+					<div id = "lifestyles-edit" class = "lifestyles-edit">
+						<h3>Common Lifestyles</h3>
+						<div class = "lifestyles edit">
+							<div class="lifestyle-container edit">
+					        	<img class = "lifestyle-image gluten-free-unselected" src="images/lifestyles/gluten free unselected.png">
+					       		<h5>Gluten-Free</h5>
+					    	</div>
+					    	<div class="lifestyle-container edit">
+					        	<img class = "lifestyle-image vegetarian-selected" src="images/lifestyles/vegetarian.png">
+					       		<h5>Vegetarian</h5>
+					    	</div>
+					    	<div class="lifestyle-container edit">
+					        	<img class = "lifestyle-image dairy-free-selected" src="images/lifestyles/dairy free.png">
+					       		<h5>Dairy-Free</h5>
+					    	</div>
+					    </div>
+					    <h3>Specific Lifestyles</h3>
+					    <div class="input-container">
+							<img id = "none-icon" src = "images/lifestyles/none.png">
+						  	<input type = "text" name = "ingredient" placeholder = "Add Ingredient">
+						</div>
+					    <div class = "lifestyles special remove">
+					    	<div class="lifestyle-container special">
+					        	<img class = "lifestyle-image none-selected" src="images/lifestyles/none.png">
+					       		<h5>Tomatoes</h5>
+					    	</div>
+					    	<div class="lifestyle-container special remove">
+					        	<img class = "lifestyle-image none-selected" src="images/lifestyles/none.png">
+					       		<h5>Peppers</h5>
+					    	</div>
+				    	</div>
+				    	<button class = "submit green" type = "submit">SAVE</button>
 					</div>
 				</div>
 				<div class = "ingredients">
@@ -304,9 +356,9 @@
 						<ul class = "ingredients-list">
 						  	<li>1 avocado</li>
 						  	<li>1 egg yolk</li>
-						  	<div class = "conflicts">
+						  	<div class = "conflicts demo">
 							  	<li>1/2 cup heavy cream</li>
-						  		<img class = "exclamation" src = "images/Exclamation.png">
+						  		<img id = "sub-demo" class = "exclamation" src = "images/Exclamation.png">
 						  	</div>
 						  	<li>1 clove garlic</li>
 						  	<li>1/2 lemon, juiced</li>
@@ -336,30 +388,47 @@
 						</ul> 
 					</div>
 				</div>
-				<div class = " finalize-button">
+				<!-- <div class = "finalize-button link slideleft" page-load = "final-recipe"> -->
+				<div class = "finalize-button">
 					<button class = "submit green" type = "submit">FINALIZE</button>
 				</div>
 			</div>
 		</div>
-		<div class="tab-bar">
-			  	<a href="dashboard.html">
-			  		<div class="tab-container">
-		        		<img class = "tab-images" src="images/tab/Home.png">
-			        	<h5>Home</h5>
-		    		</div>
-		    	</a>
-			  	<a href="recipes.html">
-			  		<div class="tab-container">
-		        		<img class = "tab-images" src="images/tab/Utensils - Green.png">
-			        	<h5 class = "highlight">Recipes</h5>
-			    	</div>
-			    </a>
-			  	<a href="saved.html">
-			  		<div class="tab-container">
-		        		<img class = "tab-images" src="images/tab/Heart.png">
-		        		<h5>Saved</h5>
-		    		</div>
-		    	</a>
-			</div>
+		<div id = "final-recipe" class = "sc">
+		</div>
+		<div class = "tab-bar">
+		  	<a href="dashboard.html">
+		  		<div class="tab-container">
+	        		<img class = "tab-images" src="images/tab/Home.png">
+		        	<h5>Home</h5>
+	    		</div>
+	    	</a>
+		  	<a href="recipes.html">
+		  		<div class="tab-container">
+	        		<img class = "tab-images" src="images/tab/Utensils - Green.png">
+		        	<h5 class = "highlight">Recipes</h5>
+		    	</div>
+		    </a>
+		  	<a href="saved.html">
+		  		<div class="tab-container">
+	        		<img class = "tab-images" src="images/tab/Heart.png">
+	        		<h5>Saved</h5>
+	    		</div>
+	    	</a>
+		</div>
+		<div class = "numpad">
+			<div class = "done-cancel">
+ 				<h5 id = "cancel-people" class = "left-text-align">Cancel</h5>
+ 				<h5 id = "done-people" class = "right-text-align">Done</h5>
+ 			</div>
+ 			<img class = "numpad-image" src="images/Numpad.png">
+		</div>
+		<div class = "sub-picker">
+			<div class = "done-cancel">
+ 				<h5 id = "cancel-sub" class = "left-text-align">Cancel</h5>
+ 				<h5 id = "done-sub" class = "right-text-align">Done</h5>
+ 			</div>
+ 			<img class = "picker-image" src="images/Sub Picker.png">
+		</div>
 	</body>
 </html>
