--- a/demo.html
+++ b/demo.html
@@ -5,8 +5,10 @@
 		<link rel="icon" href="images/Plate.png">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">
 		<link rel = "stylesheet" href="styles/style.css">
-		<link rel = "stylesheet" href="styles/animate.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+		<script src="js/google.fastbutton.js"></script>
+ 		<script src="js/jquery.google.fastbutton.js"></script>
+ 		<script src="https://ricostacruz.com/jquery.transit/jquery.transit.min.js" type="text/javascript"></script>
 		<script src = "js/main.js"></script>
 	</head>
 	<body>
