--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 		<link href="https://fonts.googleapis.com/css?family=Roboto:100,300" rel="stylesheet">
 		<link rel = "stylesheet" href="styles/style.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+		<script src="js/google.fastbutton.js"></script>
+ 		<script src="js/jquery.google.fastbutton.js"></script>
+ 		<script src="https://ricostacruz.com/jquery.transit/jquery.transit.min.js" type="text/javascript"></script>
 		<script src = "js/main.js"></script>
 	</head>
 	<body class = "green-background" onLoad = "baconFade();">
