Begin Final Recipe Page

--- a/recipes.html
+++ b/recipes.html
@@ -388,13 +388,112 @@
 						</ul> 
 					</div>
 				</div>
-				<!-- <div class = "finalize-button link slideleft" page-load = "final-recipe"> -->
 				<div class = "finalize-button">
 					<button class = "submit green" type = "submit">FINALIZE</button>
 				</div>
 			</div>
 		</div>
 		<div id = "final-recipe" class = "sc">
+			<div class="header">
+				<img id = "status-bar" src = "images/top/Status Bar.png">
+				<div class="top-bar top-border">
+			  		<a class="back link slideright" page-load="recipes">
+			  			<div class="top-container green-background breadcrumbs">
+			  				<div class = "white-overlay">
+				  				<h1>Recipes</h1>
+				  			</div>
+			  			</div>
+			  			<div class="top-container arrow">
+				  			<div id = "green-triangle">
+				  			</div>
+				  			<div id = "white-triangle">
+				  			</div>
+			  			</div>
+			  		</a>
+			  		<div class="top-container sub-breadcrumbs">
+		        		<h1>Substitutions</h1>
+		    		</div>
+			  		<div class="top-container breadcrumbs">
+		    		</div>
+			    </div>
+			</div>
+			<div class = "content">
+				<div class = "recipe-info">
+					<h6>Avocado Carbonara</h6>
+					<div class = "recipe-photo">
+						<img src = "images/recipes/Avocado Carbonara.png">
+					</div>
+					<div class = "info-container">
+						<div class = "people-serving">
+							<h5>Serves 4 people</h5>
+						</div>
+						<div class = "prep">
+							<img id = "prep-image" src = "images/Prep.png">
+							<h5>15 mins</h5>
+						</div>
+						<div class = "cooking">
+							<img id = "cooking-image" src = "images/Pot.png">
+							<h5>35 mins</h5>
+						</div>
+					</div>
+				</div>
+				<div class = "recipe-modifications">
+					<div class = "title">
+						<h5>Modified for the following lifestyle</h5>
+					</div>
+					<div id = "lifestyles" class = "lifestyles modify">
+						<div class="lifestyle-container modify">
+				        	<img class = "lifestyle-image modify" src="images/lifestyles/vegetarian.png">
+				       		<h5>Vegetarian</h5>
+				    	</div>
+				    	<div class="lifestyle-container modify">
+				        	<img class = "lifestyle-image modify" src="images/lifestyles/dairy free.png">
+				       		<h5>Dairy-Free</h5>
+				    	</div>
+					</div>
+				</div>
+				<div class = "ingredients">
+					<div class = "category exp">
+						<h1>INGREDIENTS</h1>
+						<img class = "subtract sub" src = "images/Sub.png">
+					</div>
+					<div class = "category-elements">
+						<ul class = "final-ingredients-list">
+						  	<li>2 avocado</li>
+						  	<li>2 egg yolk</li>
+							<li>2/3 cup soy milk & 1/3 cup olive oil</li>
+						  	<li>2 clove garlic</li>
+						  	<li>1 lemon, juiced</li>
+						  	<li>6 pieces seitan</li>
+						  	<li>1 pound spaghetti </li>
+						  	<li>2 tablespoon olive oil</li>
+						</ul>  
+					</div>
+				</div>
+				<div class = "instructions">
+					<div class = "category exp">
+						<h1>INSTRUCTIONS</h1>
+						<img class = "subtract" src = "images/Sub.png">
+					</div>
+					<div class = "category-elements">
+						<ul class = "final-instructions-list">
+							<li>Whisk soy milk and olive oil in a separate bowl.</li>
+						  	<li>Blend avocado, egg yolk, garlic, and lemon juice in a powerful blender or food processor. Pulse to blend and add soy milk/olive oil gradually. Blend the sauce until smooth and set aside.</li>
+						  	<li>Cut up strips of seitan and cook in a large pan. Set aside.</li>
+						  	<li>In a large pot, bring water to a boil and cook the spaghetti. Drain and coat with olive oil. Add sauce, seitan, and salt/pepper, stirring until well combine. Enjoy!</li>
+						</ul> 
+					</div>
+				</div>
+				<div class = "save-button">
+					<button class = "submit green" type = "submit">SAVE</button>
+				</div>
+				<div class = "email-button">
+					<button class = "submit green" type = "submit">EMAIL</button>
+				</div>
+				<div class = "share-button">
+					<button class = "submit green" type = "submit">SHARE</button>
+				</div>
+			</div>
 		</div>
 		<div class = "tab-bar">
 		  	<a href="dashboard.html">
