--- a/recipes.html
+++ b/recipes.html
@@ -15,7 +15,7 @@
  		<script src="https://ricostacruz.com/jquery.transit/jquery.transit.min.js" type="text/javascript"></script>
  		<script src = "js/main.js"></script>
 	</head>
-	<body onLoad = "sliders(); editPeople(); cancel(); done(); modifyLifestyles(); warning(); substitution();">
+	<body onLoad = "sliders(); editPeople(); cancel(); done(); modifyLifestyles(); warning(); substitution(); save(); emailPopUp(); email(); sharePopUp(); share();">
 		<div id = "recipes" class = "sc selected">
 			<div class="header">
 				<img id = "status-bar" src = "images/top/Status Bar.png">
@@ -35,7 +35,7 @@
 			<div class = "content">
 				<div class = "recipes">
 					<div class = "search">
-						<div class="input-container">
+						<div class="search-container remove-space">
 							<img id = "search-icon" class = "small" src = "images/Search.png">
 						  	<input type = "text" name = "search" placeholder = "Search">
 						</div>
@@ -396,24 +396,45 @@
 		<div id = "final-recipe" class = "sc">
 			<div class="header">
 				<img id = "status-bar" src = "images/top/Status Bar.png">
+				<div class = "save">
+					<div class = "toast">
+						<img id = "fix" src = "images/Check - Black.png">
+						<h5>Your recipe has been saved.</h5>
+					</div>
+				</div>
+				<div class = "email">
+					<div class = "toast">
+						<img id = "fix" src = "images/Check - Black.png">
+						<h5>Your recipe has been emailed.</h5>
+					</div>
+				</div>
+				<div class = "share">
+					<div class = "toast">
+						<img id = "fix" src = "images/Check - Black.png">
+						<h5>Your recipe has been shared.</h5>
+					</div>
+				</div>
 				<div class="top-bar top-border">
-			  		<a class="back link slideright" page-load="recipes">
-			  			<div class="top-container green-background breadcrumbs">
-			  				<div class = "white-overlay">
-				  				<h1>Recipes</h1>
-				  			</div>
+		  			<div class="top-container green-background extend-breadcrumbs">
+		  				<div class = "white-overlay">
+			  				<h1>Recipes</h1>
 			  			</div>
-			  			<div class="top-container arrow">
-				  			<div id = "green-triangle">
-				  			</div>
-				  			<div id = "white-triangle">
-				  			</div>
-			  			</div>
-			  		</a>
-			  		<div class="top-container sub-breadcrumbs">
-		        		<h1>Substitutions</h1>
+		  			</div>
+			  		<!-- <a class="back link slideright" page-load="chosen-recipe"> -->
+			  		<div class="top-container green-background sub-breadcrumbs">
+			  			<div class = "white-overlay">
+			        		<h1>Substitutions</h1>
+			        	</div>
 		    		</div>
+		    		<div class="top-container arrow">
+			  			<div id = "green-triangle">
+			  			</div>
+			  			<div id = "white-triangle">
+			  			</div>
+			  		</div>
+			  		<!-- </a> -->
 			  		<div class="top-container breadcrumbs">
+			  			<h1>Final</h1>
 		    		</div>
 			    </div>
 			</div>
@@ -493,6 +514,12 @@
 				<div class = "share-button">
 					<button class = "submit green" type = "submit">SHARE</button>
 				</div>
+			</div>
+			<div class = "email-popup">
+				<img src = "images/Email Recipe.png">
+			</div>
+			<div class = "share-popup">
+				<img src = "images/Facebook Share.png">
 			</div>
 		</div>
 		<div class = "tab-bar">
