--- a/saved.html
+++ b/saved.html
@@ -15,7 +15,7 @@
  		<script src="https://ricostacruz.com/jquery.transit/jquery.transit.min.js" type="text/javascript"></script>
  		<script src = "js/main.js"></script>
 	</head>
-	<body>
+	<body onLoad = "editPopUp(); edit();">
 		<div id = "saved" class = "sc selected">
 			<div class="header">
 				<img id = "status-bar" src = "images/top/Status Bar.png">
@@ -45,39 +45,31 @@
 							<img class = "subtract sub" src = "images/Sub.png">
 						</div>
 						<div class = "category-elements">
-							<!-- <div class = "text-field header-conflict overlap">
-								<h1>American</h1>
-								<img class = "filter-check checked checked" src = "images/Check - Green.png">
+							<div class = "saved-field header-conflict overlap link slideleft" page-load = "saved-recipe">
+								<img class = "made-photo" src = "images/recipes/Avocado Carbonara.png">
+								<p>Avocado Carbonara<br/>Vegetarian, Dairy-Free<br/>Serves 4 people</p>
+								<div class = "saved-icons">
+									<img class = "saved-email" src = "images/Envelope.png">
+									<img class = "saved-share" src = "images/Facebook Icon.png">
+								</div>
 							</div>
-							<div class = "text-field overlap">
-								<h1>BBQ</h1>
-								<img class = "filter-check checked checked" src = "images/Check - Green.png">
+							<div class = "saved-field overlap">
+								<img class = "made-photo" src = "images/recipes/Carnitas Tacos.png">
+								<p>Carnitas Tacos<br/>Dairy-Free<br/>Serves 2 people</p>
+								<div class = "saved-icons">
+									<img class = "saved-email" src = "images/Envelope.png">
+									<img class = "saved-share" src = "images/Facebook Icon.png">
+								</div>
 							</div>
-							<div class = "text-field overlap">
-								<h1>Chinese</h1>
-								<img class = "filter-check checked checked" src = "images/Check - Green.png">
+							<div class = "saved-field bottom-overlap overlap">
+								<img class = "made-photo" src = "images/recipes/Swedish Meatballs.png">
+								<p>Swedish Meatballs<br/>Vegan<br/>Serves 8 people</p>
+								<div class = "saved-icons">
+									<img class = "saved-email" src = "images/Envelope.png">
+									<img class = "saved-share" src = "images/Facebook Icon.png">
+								</div>
 							</div>
-							<div class = "text-field overlap">
-								<h1>Indian</h1>
-								<img class = "filter-check checked checked" src = "images/Check - Green.png">
-							</div>
-							<div class = "text-field overlap">
-								<h1>Japanese</h1>
-								<img class = "filter-check checked" src = "images/Check - Green.png">
-							</div>
-							<div class = "text-field overlap">
-								<h1>Korean</h1>
-								<img class = "filter-check checked" src = "images/Check - Green.png">
-							</div>
-							<div class = "text-field overlap">
-								<h1>Mexican</h1>
-								<img class = "filter-check checked" src = "images/Check - Green.png">
-							</div>
-							<div class = "text-field overlap bottom-overlap">
-								<h1>Thai</h1>
-								<img class = "filter-check checked" src = "images/Check - Green.png">
-							</div>
-						</div> -->
+						</div>
 					</div>
 					<div class = "saved-later">
 						<div class = "category exp">
@@ -85,41 +77,110 @@
 							<img class = "subtract sub" src = "images/Sub.png">
 						</div>
 						<div class = "category-elements">
-							<!-- <div class = "text-field header-conflict overlap">
-								<h1>American</h1>
-								<img class = "filter-check checked checked" src = "images/Check - Green.png">
+							<div class = "saved-field header-conflict overlap">
+								<img class = "made-photo" src = "images/recipes/Fettuccine Alfredo.png">
+								<h5 class = "recipe-title">Fettuccine Alfredo</h5>
 							</div>
-							<div class = "text-field overlap">
-								<h1>BBQ</h1>
-								<img class = "filter-check checked checked" src = "images/Check - Green.png">
+							<div class = "saved-field overlap">
+								<img class = "made-photo" src = "images/recipes/Mac and Cheese.png">
+								<h5 class = "recipe-title">Mac and Cheese</h5>
 							</div>
-							<div class = "text-field overlap">
-								<h1>Chinese</h1>
-								<img class = "filter-check checked checked" src = "images/Check - Green.png">
+							<div class = "saved-field overlap">
+								<img class = "made-photo" src = "images/recipes/Teriyaki Tofu.png">
+								<h5 class = "recipe-title">Tofu Teriyaki</h5>
 							</div>
-							<div class = "text-field overlap">
-								<h1>Indian</h1>
-								<img class = "filter-check checked checked" src = "images/Check - Green.png">
-							</div>
-							<div class = "text-field overlap">
-								<h1>Japanese</h1>
-								<img class = "filter-check checked" src = "images/Check - Green.png">
-							</div>
-							<div class = "text-field overlap">
-								<h1>Korean</h1>
-								<img class = "filter-check checked" src = "images/Check - Green.png">
-							</div>
-							<div class = "text-field overlap">
-								<h1>Mexican</h1>
-								<img class = "filter-check checked" src = "images/Check - Green.png">
-							</div>
-							<div class = "text-field overlap bottom-overlap">
-								<h1>Thai</h1>
-								<img class = "filter-check checked" src = "images/Check - Green.png">
-							</div>
-						</div> -->
+						</div>
 					</div>
 			    </div>
+			</div>
+		</div>
+		<div id = "saved-recipe" class = "sc">
+			<div class="header">
+				<img id = "status-bar" src = "images/top/Status Bar.png">
+				<div class="top-bar">
+			  		<a class="back link slideright" page-load="saved">
+				  		<div class="top-container">
+			        		<img id = "back-button" src="images/top/Back Arrow.png">
+			    		</div>
+			    	</a>
+			  		<div class="top-container">
+		        		<h1>My Recipe</h1>
+			    	</div>
+			  		<div class="top-container">
+			  			<img class = "edit-recipe" src = "images/Edit.png">
+		    		</div>
+			    </div>
+			</div>
+			<div class = "content">
+				<div class = "recipe-info">
+					<h6>Avocado Carbonara</h6>
+					<div class = "recipe-photo">
+						<img src = "images/recipes/Avocado Carbonara.png">
+					</div>
+					<div class = "info-container">
+						<div class = "people-serving">
+							<h5>Serves 4 people</h5>
+						</div>
+						<div class = "prep">
+							<img id = "prep-image" src = "images/Prep.png">
+							<h5>15 mins</h5>
+						</div>
+						<div class = "cooking">
+							<img id = "cooking-image" src = "images/Pot.png">
+							<h5>35 mins</h5>
+						</div>
+					</div>
+				</div>
+				<div class = "recipe-modifications">
+					<div class = "title">
+						<h5>Modified for the following lifestyle</h5>
+					</div>
+					<div id = "lifestyles" class = "lifestyles modify">
+						<div class="lifestyle-container modify">
+				        	<img class = "lifestyle-image modify" src="images/lifestyles/vegetarian.png">
+				       		<h5>Vegetarian</h5>
+				    	</div>
+				    	<div class="lifestyle-container modify">
+				        	<img class = "lifestyle-image modify" src="images/lifestyles/dairy free.png">
+				       		<h5>Dairy-Free</h5>
+				    	</div>
+					</div>
+				</div>
+				<div class = "ingredients">
+					<div class = "category exp">
+						<h1>INGREDIENTS</h1>
+						<img class = "subtract sub" src = "images/Sub.png">
+					</div>
+					<div class = "category-elements">
+						<ul class = "final-ingredients-list">
+						  	<li>2 avocado</li>
+						  	<li>2 egg yolk</li>
+							<li>2/3 cup soy milk & 1/3 cup olive oil</li>
+						  	<li>2 clove garlic</li>
+						  	<li>1 lemon, juiced</li>
+						  	<li>6 pieces seitan</li>
+						  	<li>1 pound spaghetti </li>
+						  	<li>2 tablespoon olive oil</li>
+						</ul>  
+					</div>
+				</div>
+				<div class = "instructions">
+					<div class = "category exp">
+						<h1>INSTRUCTIONS</h1>
+						<img class = "subtract" src = "images/Sub.png">
+					</div>
+					<div class = "category-elements">
+						<ul class = "final-instructions-list">
+							<li>Whisk soy milk and olive oil in a separate bowl.</li>
+						  	<li>Blend avocado, egg yolk, garlic, and lemon juice in a powerful blender or food processor. Pulse to blend and add soy milk/olive oil gradually. Blend the sauce until smooth and set aside.</li>
+						  	<li>Cut up strips of seitan and cook in a large pan. Set aside.</li>
+						  	<li>In a large pot, bring water to a boil and cook the spaghetti. Drain and coat with olive oil. Add sauce, seitan, and salt/pepper, stirring until well combine. Enjoy!</li>
+						</ul> 
+					</div>
+				</div>
+			</div>
+			<div class = "edit-popup">
+				<img src = "images/Edit Recipe.png">
 			</div>
 		</div>
 		<div class = "tab-bar">
