Remove demo and status bar

--- a/dashboard.html
+++ b/dashboard.html
@@ -16,7 +16,8 @@
 	<body>
 		<div id = "dashboard" class = "sc selected">
 			<div class="header">
-				<img id = "status-bar" src = "images/top/Status Bar.png">
+				<!-- <img id = "status-bar" src = "images/top/Status Bar.png"> -->
+				<div class = "status-bar"></div>
 				<div class="top-bar">
 			  		<div class="top-container empty"></div>
 			  		<div class="top-container">
@@ -61,7 +62,8 @@
 		</div>
 		<div id = "profile" class = "sc">
 			<div class="header">
-				<img id = "status-bar" src = "images/top/Status Bar.png">
+				<!-- <img id = "status-bar" src = "images/top/Status Bar.png"> -->
+				<div class = "status-bar"></div>
 				<div class="top-bar">
 			  		<a class="back link slideright" page-load="dashboard">
 				  		<div class="top-container">
@@ -144,20 +146,20 @@
 			</div>
 		</div>
 		<div class="tab-bar">
-			  <a href="dashboard.html"><div class="tab-container">
-		        	<img class = "tab-images" src="images/tab/Home - Green.png">
-		        	<h5 class = "highlight">Home</h5>
-		    	</div>
-		    	</a>
-			  <a href="recipes.html"><div class="tab-container">
-		        	<img class = "tab-images" src="images/tab/Utensils.png">
-		        	<h5>Recipes</h5>
-		    	</div></a>
-			  <a href="saved.html"><div class="tab-container">
-		        	<img class = "tab-images" src="images/tab/Heart.png">
-		        	<h5>Saved</h5>
-		    	</div></a>
-			</div>
+		  <a href="dashboard.html"><div class="tab-container">
+	        	<img class = "tab-images" src="images/tab/Home - Green.png">
+	        	<h5 class = "highlight">Home</h5>
+	    	</div>
+	    	</a>
+		  <a href="recipes.html"><div class="tab-container">
+	        	<img class = "tab-images" src="images/tab/Utensils.png">
+	        	<h5>Recipes</h5>
+	    	</div></a>
+		  <a href="saved.html"><div class="tab-container">
+	        	<img class = "tab-images" src="images/tab/Heart.png">
+	        	<h5>Saved</h5>
+	    	</div></a>
+		</div>
 	</body>
 </html>
 </html>
