--- a/recipes.html
+++ b/recipes.html
@@ -18,7 +18,8 @@
 	<body onLoad = "sliders(); editPeople(); cancel(); done(); modifyLifestyles(); warning(); substitution(); save(); emailPopUp(); email(); sharePopUp(); share();">
 		<div id = "recipes" class = "sc selected">
 			<div class="header">
-				<img id = "status-bar" src = "images/top/Status Bar.png">
+				<!-- <img id = "status-bar" src = "images/top/Status Bar.png"> -->
+				<div class = "status-bar"></div>
 				<div class="top-bar">
 			  		<div class="top-container">
 			  			<img id = "filter-icon"  class = "link slideright" page-load = "filters" src="images/Filter.png">
@@ -75,7 +76,8 @@
 		</div>
 		<div id = "filters" class = "sc">
 			<div class="header">
-				<img id = "status-bar" src = "images/top/Status Bar.png">
+				<!-- img id = "status-bar" src = "images/top/Status Bar.png"> -->
+				<div class = "status-bar"></div>
 				<div class="top-bar">
 			  		<a class="back link slideleft" page-load="recipes">
 			  			<div class="top-container">
@@ -225,7 +227,8 @@
 		</div>
 		<div id = "chosen-recipe" class = "sc">
 			<div class="header">
-				<img id = "status-bar" src = "images/top/Status Bar.png">
+				<!-- <img id = "status-bar" src = "images/top/Status Bar.png"> -->
+				<div class = "status-bar"></div>
 				<div class = "warning">
 					<div class = "toast">
 						<img id = "fix" src = "images/Cancel - Black.png">
@@ -395,7 +398,8 @@
 		</div>
 		<div id = "final-recipe" class = "sc">
 			<div class="header">
-				<img id = "status-bar" src = "images/top/Status Bar.png">
+				<!-- <img id = "status-bar" src = "images/top/Status Bar.png"> -->
+				<div class = "status-bar"></div>
 				<div class = "save">
 					<div class = "toast">
 						<img id = "fix" src = "images/Check - Black.png">
