--- a/saved.html
+++ b/saved.html
@@ -18,7 +18,8 @@
 	<body onLoad = "editPopUp(); edit();">
 		<div id = "saved" class = "sc selected">
 			<div class="header">
-				<img id = "status-bar" src = "images/top/Status Bar.png">
+				<!-- <img id = "status-bar" src = "images/top/Status Bar.png"> -->
+				<div class = "status-bar"></div>
 				<div class="top-bar">
 			  		<div class="top-container empty">
 			  		</div>
@@ -96,7 +97,8 @@
 		</div>
 		<div id = "saved-recipe" class = "sc">
 			<div class="header">
-				<img id = "status-bar" src = "images/top/Status Bar.png">
+				<!-- <img id = "status-bar" src = "images/top/Status Bar.png"> -->
+				<div class = "status-bar"></div>
 				<div class="top-bar">
 			  		<a class="back link slideright" page-load="saved">
 				  		<div class="top-container">
