--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 		<script src = "js/main.js"></script>
 	</head>
 	<body class = "green-background" onLoad = "baconFade();">
-		<img class = "transparent-bar" id = "status-bar" src = "images/top/Status Bar.png">
+		<!-- <img class = "transparent-bar" id = "status-bar" src = "images/top/Status Bar.png"> -->
+		<div class = "status-bar"></div>
 		<div class = "logo">
 			<img id = "hold-the-logo" src = "images/Full Logo.png">
 			<img id = "bacon" src = "images/food/Bacon.png">
