Added on boarding and made changes for iPhone 5 capabilities

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</head>
 	<body class = "green-background" onLoad = "baconFade();">
 		<!-- <img class = "transparent-bar" id = "status-bar" src = "images/top/Status Bar.png"> -->
-		<div class = "status-bar"></div>
+		<div class = "status-bar transparent-bar"></div>
 		<div class = "logo">
 			<img id = "hold-the-logo" src = "images/Full Logo.png">
 			<img id = "bacon" src = "images/food/Bacon.png">
