--- a/saved.html
+++ b/saved.html
@@ -181,9 +181,26 @@
 					</div>
 				</div>
 			</div>
-			<div class = "edit-popup">
-				<img src = "images/Edit Recipe.png">
+			<div id = "edit-popup" class = "edit-popup">
+				<div class = "edit-choice">
+					<div class = "edit-text">
+						<h3>Edit Recipe</h3>
+						<h3>Do you want to edit current version or create new version?</h3>
+					</div>
+					<div id = "current" class = "cell">
+						<h3>Current Version</h3>
+					</div>
+					<div id = "new" class = "cell">
+						<h3>New Version</h3>
+					</div>
+					<div id = "cancel" class = "cell">
+						<h3>Cancel</h3>
+					</div>
+				</div>
 			</div>
+			<!-- <div class = "edit-popup">
+				<img src = "images/Edit Recipe.png">
+			</div> -->
 		</div>
 		<div class = "tab-bar">
 		  	<a href="dashboard.html">
