--- a/recipes.html
+++ b/recipes.html
@@ -15,7 +15,7 @@
  		<script src="https://ricostacruz.com/jquery.transit/jquery.transit.min.js" type="text/javascript"></script>
  		<script src = "js/main.js"></script>
 	</head>
-	<body onLoad = "sliders(); editPeople(); cancel(); done(); modifyLifestyles(); warning(); substitution(); save(); emailPopUp(); email(); sharePopUp(); share();">
+	<body onLoad = "sliders(); editPeople(); cancel(); done(); modifyLifestyles(); warning(); substitution(); onboarding(); save(); emailPopUp(); email(); sharePopUp(); share();">
 		<div id = "recipes" class = "sc selected">
 			<div class="header">
 				<!-- <img id = "status-bar" src = "images/top/Status Bar.png"> -->
@@ -258,7 +258,8 @@
 			</div>
 			<div class = "content">
 				<div class = "question">
-					<img src = "images/Question Mark.png">
+					<img class = "onboarding-begin" src = "images/Question Mark.png">
+					<img class = "onboarding-cancel" src="images/Cancel - Green.png">
 				</div>
 				<div class = "recipe-info">
 					<h6>Avocado Carbonara</h6>
@@ -394,6 +395,21 @@
 				<div class = "finalize-button">
 					<button class = "submit green" type = "submit">FINALIZE</button>
 				</div>
+				<div class = "onboarding-popup first">
+					<p class = "onboarding-instructions">Here are the overall recipe details. You can adjust the number of people being served.</p>
+					<h2 class = "onboarding-button">NEXT</h2>
+				</div>
+				<div class = "onboarding-popup second">
+					<p class = "onboarding-instructions">You can choose the lifestyle(s) to alter the recipe. Your profile lifestyles are automatically chosen, but you can choose different lifestyles.</p>
+					<h2 class = "onboarding2-button">NEXT</h2>
+				</div>
+				<div class = "onboarding-popup second-piece"></div>
+				<div class = "onboarding-popup third">
+					<div class = "placement">
+						<p class = "onboarding-instructions">There are conflicts next to ingredients that do not following the lifestyle(s) chosen. Click on each exclamation point to resolve the ingredient conflicts. Changes will be made to the ingredients and instructions.</p>
+						<h2 class = "onboarding3-button">GOT IT</h2>
+					</div>
+				</div>
 			</div>
 		</div>
 		<div id = "final-recipe" class = "sc">
@@ -424,18 +440,18 @@
 			  				<h1>Recipes</h1>
 			  			</div>
 		  			</div>
-			  		<!-- <a class="back link slideright" page-load="chosen-recipe"> -->
-			  		<div class="top-container green-background sub-breadcrumbs">
-			  			<div class = "white-overlay">
-			        		<h1>Substitutions</h1>
-			        	</div>
-		    		</div>
-		    		<div class="top-container arrow">
-			  			<div id = "green-triangle">
-			  			</div>
-			  			<div id = "white-triangle">
-			  			</div>
-			  		</div>
+				  	<!-- <a class="back link slideright" page-load="chosen-recipe"> -->
+				  		<div class="top-container green-background sub-breadcrumbs">
+				  			<div class = "white-overlay">
+				        		<h1>Substitutions</h1>
+				        	</div>
+			    		</div>
+			    		<div class="top-container arrow">
+				  			<div id = "green-triangle">
+				  			</div>
+				  			<div id = "white-triangle">
+				  			</div>
+				  		</div>
 			  		<!-- </a> -->
 			  		<div class="top-container breadcrumbs">
 			  			<h1>Final</h1>
@@ -519,11 +535,25 @@
 					<button class = "submit green" type = "submit">SHARE</button>
 				</div>
 			</div>
-			<div class = "email-popup">
-				<img src = "images/Email Recipe.png">
+			<div id = "email-popup" class = "email-popup">
+				<div class = "email-choice">
+					<div class = "email-text">
+						<h3>Email Recipe</h3>
+						<h3>Who do you want to email this recipe?</h3>
+					</div>
+					<div id = "myself" class = "cell">
+						<h3>Myself</h3>
+					</div>
+					<div id = "friend" class = "cell">
+						<h3>Friend</h3>
+					</div>
+					<div id = "cancel" class = "cell">
+						<h3>Cancel</h3>
+					</div>
+				</div>
 			</div>
-			<div class = "share-popup">
-				<img src = "images/Facebook Share.png">
+			<div id = "share-popup" class = "share-popup">
+				<img class = "share-image" src = "images/Facebook Share.png">
 			</div>
 		</div>
 		<div class = "tab-bar">
@@ -546,14 +576,14 @@
 	    		</div>
 	    	</a>
 		</div>
-		<div class = "numpad">
+		<div id = "numpad">
 			<div class = "done-cancel">
  				<h5 id = "cancel-people" class = "left-text-align">Cancel</h5>
  				<h5 id = "done-people" class = "right-text-align">Done</h5>
  			</div>
  			<img class = "numpad-image" src="images/Numpad.png">
 		</div>
-		<div class = "sub-picker">
+		<div id = "sub-picker">
 			<div class = "done-cancel">
  				<h5 id = "cancel-sub" class = "left-text-align">Cancel</h5>
  				<h5 id = "done-sub" class = "right-text-align">Done</h5>
