--- a/recipes.html
+++ b/recipes.html
@@ -5,9 +5,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="icon" href="images/Plate.png">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400" rel="stylesheet">
-		<link rel = "stylesheet" href="styles/style.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-		<link rel = "stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.css">
+		<link href="styles/nouislider.min.css" rel="stylesheet">
+		<link rel = "stylesheet" href="styles/style.css">
+<!-- 		<link rel = "stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.css"> -->
+		<script src="js/nouislider.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.js"></script>
 		<script src="js/google.fastbutton.js"></script>
@@ -15,7 +17,7 @@
  		<script src="https://ricostacruz.com/jquery.transit/jquery.transit.min.js" type="text/javascript"></script>
  		<script src = "js/main.js"></script>
 	</head>
-	<body onLoad = "sliders(); editPeople(); cancel(); done(); modifyLifestyles(); warning(); substitution(); onboarding(); save(); emailPopUp(); email(); sharePopUp(); share();">
+	<body onLoad = "servingSlider(); prepSlider(); cookingSlider(); editPeople(); cancel(); done(); modifyLifestyles(); warning(); substitution(); onboarding(); save(); emailPopUp(); email(); sharePopUp(); share();">
 		<div id = "recipes" class = "sc selected">
 			<div class="header">
 				<!-- <img id = "status-bar" src = "images/top/Status Bar.png"> -->
@@ -180,15 +182,24 @@
 						<h1>SERVING</h1>
 						<img class = "subtract" src = "images/Sub.png">
 					</div>
-					<div class = "range">
-						<span class="slider">
-						  	<div id="left-people" class="slider-text right-text-align">2 people</div>
-						  	<div id="serving-slider-range">
-						    	<div id = "custom-handle" class="ui-slider-handle"></div>
-						    	<div id = "custom-handle" class="ui-slider-handle right-handle"></div>
+					<div class="range">
+						<div class="slider">
+							<div class = "slider-text right-text-align" id = "serving-min-value">2 people</div>
+							<input min="2" max="30" step="1" id="serving-min" type="hidden">
+							<div class="noUi-target noUi-ltr noUi-horizontal" id="serving-slider">
+								<div class="noUi-base">
+									<div style="left: 25%;" class="noUi-origin">
+										<div style="z-index: 5;" data-handle="0" class="noUi-handle noUi-handle-lower"></div>
+									</div>
+									<div style="left: 25%; right: 18.1911%;" class="noUi-connect"></div>
+									<div style="left: 81.8089%;" class="noUi-origin">
+										<div style="z-index: 4;" data-handle="1" class="custom-handle noUi-handle noUi-handle-upper"></div>
+									</div>
+								</div>
 							</div>
-						  	<div id="right-people" class="slider-text left-text-align">30 people</div>
-						</span>
+							<div class = "slider-text left-text-align" id = "serving-max-value">30 people</div>
+							<input min="2" max="30" step="1" id="serving-max" type="hidden">
+						</div>
 					</div>
 				</div>
 				<div class = "prep-time">
@@ -196,15 +207,24 @@
 						<h1>PREP TIME</h1>
 						<img class = "subtract" src = "images/Sub.png">
 					</div>
-					<div class = "range">
-						<span class="slider">
-						  	<div id="prep-left-mins" class="slider-text right-text-align">0 mins</div>
-						  	<div id="prep-slider-range">
-						    	<div id = "custom-handle" class="ui-slider-handle custom-handle"></div>
-						    	<div id = "custom-handle" class="ui-slider-handle right-handle"></div>
+					<div class="range">
+						<div class="slider">
+							<div class = "slider-text right-text-align" id = "prep-min-value">2 people</div>
+							<input min="2" max="30" step="1" id="prep-min" type="hidden">
+							<div class="noUi-target noUi-ltr noUi-horizontal" id="prep-slider">
+								<div class="noUi-base">
+									<div style="left: 25%;" class="noUi-origin">
+										<div style="z-index: 5;" data-handle="0" class="noUi-handle noUi-handle-lower"></div>
+									</div>
+									<div style="left: 25%; right: 18.1911%;" class="noUi-connect"></div>
+									<div style="left: 81.8089%;" class="noUi-origin">
+										<div style="z-index: 4;" data-handle="1" class="custom-handle noUi-handle noUi-handle-upper"></div>
+									</div>
+								</div>
 							</div>
-						  	<div id="prep-right-mins" class="slider-text left-text-align">60 mins</div>
-						</span>
+							<div class = "slider-text left-text-align" id = "prep-max-value">30 people</div>
+							<input min="2" max="30" step="1" id="prep-max" type="hidden">
+						</div>
 					</div>
 				</div>
 				<div class = "cooking-time">
@@ -212,15 +232,24 @@
 						<h1>COOKING TIME</h1>
 						<img class = "subtract" src = "images/Sub.png">
 					</div>
-					<div class = "range">
-						<span class="slider">
-						  	<div id="cooking-left-mins" class="slider-text right-text-align">0 mins</div>
-						  	<div id="cooking-slider-range">
-						    	<div id = "custom-handle" class="ui-slider-handle custom-handle"></div>
-						    	<div id = "custom-handle" class="ui-slider-handle right-handle"></div>
+					<div class="range">
+						<div class="slider">
+							<div class = "slider-text right-text-align" id = "cooking-min-value">2 people</div>
+							<input min="2" max="30" step="1" id="cooking-min" type="hidden">
+							<div class="noUi-target noUi-ltr noUi-horizontal" id="cooking-slider">
+								<div class="noUi-base">
+									<div style="left: 25%;" class="noUi-origin">
+										<div style="z-index: 5;" data-handle="0" class="noUi-handle noUi-handle-lower"></div>
+									</div>
+									<div style="left: 25%; right: 18.1911%;" class="noUi-connect"></div>
+									<div style="left: 81.8089%;" class="noUi-origin">
+										<div style="z-index: 4;" data-handle="1" class="custom-handle noUi-handle noUi-handle-upper"></div>
+									</div>
+								</div>
 							</div>
-						  	<div id="cooking-right-mins" class="slider-text left-text-align">180 mins</div>
-						</span>
+							<div class = "slider-text left-text-align" id = "cooking-max-value">30 people</div>
+							<input min="2" max="30" step="1" id="cooking-max" type="hidden">
+						</div>
 					</div>
 				</div>
 			</div>
