Add Swipe to Delete and Fix Email to Myself

--- a/recipes.html
+++ b/recipes.html
@@ -8,7 +8,6 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 		<link href="styles/nouislider.min.css" rel="stylesheet">
 		<link rel = "stylesheet" href="styles/style.css">
-<!-- 		<link rel = "stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.css"> -->
 		<script src="js/nouislider.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.js"></script>
@@ -570,12 +569,16 @@
 						<h3>Email Recipe</h3>
 						<h3>Who do you want to email this recipe?</h3>
 					</div>
-					<div id = "myself" class = "cell">
-						<h3>Myself</h3>
-					</div>
-					<div id = "friend" class = "cell">
-						<h3>Friend</h3>
-					</div>
+					<a href = "mailto:dale.lewis@gmail.com?subject=Avocado%20Carbonara%20Recipe&body=Avocado%Carbonara%20(Vegetarian%20and%20Dairy-Free)%0D%0A%0D%0Ahttp://hold.the/5k15G17" target="_top">
+						<div id = "myself" class = "cell">
+							<h3>Myself</h3>
+						</div>
+					</a>
+					<a href = "mailto:hello@youneedtotrythis.com?subject=Avocado%20Carbonara%20Recipe&body=Hey!%0D%0AYou%20need%20to%20try%20this%20recipe!!%20It's%20to%20die%20for!!%0D%0A-Dale%0D%0A%0D%0Ahttp://hold.the/5k15G17" target="_top">
+						<div id = "friend" class = "cell">
+							<h3>Friend</h3>
+						</div>
+					</a>
 					<div id = "cancel" class = "cell">
 						<h3>Cancel</h3>
 					</div>
