--- a/saved.html
+++ b/saved.html
@@ -7,7 +7,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400" rel="stylesheet">
 		<link rel = "stylesheet" href="styles/style.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-		<link rel = "stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.css">
+		<script src = "js/swiped.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.js"></script>
 		<script src="js/google.fastbutton.js"></script>
@@ -15,7 +15,7 @@
  		<script src="https://ricostacruz.com/jquery.transit/jquery.transit.min.js" type="text/javascript"></script>
  		<script src = "js/main.js"></script>
 	</head>
-	<body onLoad = "editPopUp(); edit();">
+	<body onLoad = "editPopUp(); edit(); swipeDelete();">
 		<div id = "saved" class = "sc selected">
 			<div class="header">
 				<!-- <img id = "status-bar" src = "images/top/Status Bar.png"> -->
@@ -45,7 +45,7 @@
 							<h1>RECIPES I MADE</h1>
 							<img class = "subtract sub" src = "images/Sub.png">
 						</div>
-						<div class = "category-elements">
+						<div class = "category-elements delete">
 							<div class = "saved-field header-conflict overlap link slideleft" page-load = "saved-recipe">
 								<img class = "made-photo" src = "images/recipes/Avocado Carbonara.png">
 								<p>Avocado Carbonara<br/>Vegetarian, Dairy-Free<br/>Serves 4 people</p>
@@ -77,7 +77,7 @@
 							<h1>SAVED FOR LATER</h1>
 							<img class = "subtract sub" src = "images/Sub.png">
 						</div>
-						<div class = "category-elements">
+						<div class = "category-elements delete">
 							<div class = "saved-field header-conflict overlap">
 								<img class = "made-photo" src = "images/recipes/Fettuccine Alfredo.png">
 								<h5 class = "recipe-title">Fettuccine Alfredo</h5>
