Remove archives and add some demo constraints

--- a/recipes.html
+++ b/recipes.html
@@ -296,7 +296,7 @@
 					</div>
 					<div class = "info-container">
 						<div class = "people-serving">
-							<h5>Serves 2 people</h5>
+							<h5 class = "adjustment">Serves 2 people</h5>
 							<img id = "edit-people" src = "images/Edit.png">
 						</div>
 						<div class = "prep">
