Comment and clean up code

--- a/dashboard.html
+++ b/dashboard.html
@@ -14,9 +14,10 @@
 		<script src = "js/main.js"></script>
 	</head>
 	<body>
+		<!-- dashboard page -->
 		<div id = "dashboard" class = "sc selected">
+			<!-- dashboard header -->
 			<div class="header">
-				<!-- <img id = "status-bar" src = "images/top/Status Bar.png"> -->
 				<div class = "status-bar"></div>
 				<div class="top-bar">
 			  		<div class="top-container empty"></div>
@@ -28,6 +29,7 @@
 			    	</div>
 			    </div>
 			</div>
+			<!-- dashboard content -->
 			<div class = "content">
 				<div class = "welcome">
 					<h3>Hello Dale Lewis!</h3>
@@ -60,9 +62,10 @@
 				</div>
 			</div>
 		</div>
+		<!-- profile page -->
 		<div id = "profile" class = "sc">
+			<!-- profile header -->
 			<div class="header">
-				<!-- <img id = "status-bar" src = "images/top/Status Bar.png"> -->
 				<div class = "status-bar"></div>
 				<div class="top-bar">
 			  		<a class="back link slideright" page-load="dashboard">
@@ -76,6 +79,7 @@
 			    	<div class="top-container empty"></div>
 			    </div>
 			</div>
+			<!-- profile content -->
 			<div class = "content">
 				<div id = "profile-picture">
 					<img id = "dale" src = "images/top/Profile.png">
@@ -145,6 +149,7 @@
 				</div>
 			</div>
 		</div>
+		<!-- tab bar -->
 		<div class="tab-bar">
 		  <a href="dashboard.html"><div class="tab-container">
 	        	<img class = "tab-images" src="images/tab/Home - Green.png">
