--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
  		<script src="https://ricostacruz.com/jquery.transit/jquery.transit.min.js" type="text/javascript"></script>
 		<script src = "js/main.js"></script>
 	</head>
+	<!-- load in food animation -->
 	<body class = "green-background" onLoad = "baconFade();">
-		<!-- <img class = "transparent-bar" id = "status-bar" src = "images/top/Status Bar.png"> -->
+		<!-- sign in page -->
 		<div class = "status-bar transparent-bar"></div>
 		<div class = "logo">
 			<img id = "hold-the-logo" src = "images/Full Logo.png">
