--- a/recipes.html
+++ b/recipes.html
@@ -5,21 +5,21 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="icon" href="images/Plate.png">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400" rel="stylesheet">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 		<link href="styles/nouislider.min.css" rel="stylesheet">
 		<link rel = "stylesheet" href="styles/style.css">
 		<script src="js/nouislider.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.js"></script>
 		<script src="js/google.fastbutton.js"></script>
  		<script src="js/jquery.google.fastbutton.js"></script>
  		<script src="https://ricostacruz.com/jquery.transit/jquery.transit.min.js" type="text/javascript"></script>
  		<script src = "js/main.js"></script>
 	</head>
+	<!-- load in serving slider, prep time slider, cooking time slider, edit people, cancel button, done button, modify lifestyles, warning toast, substitution finalization, onboarding walkthrough, save toast, email popup, email toast, share popup, share toast -->
 	<body onLoad = "servingSlider(); prepSlider(); cookingSlider(); editPeople(); cancel(); done(); modifyLifestyles(); warning(); substitution(); onboarding(); save(); emailPopUp(); email(); sharePopUp(); share();">
+		<!-- recipes page -->
 		<div id = "recipes" class = "sc selected">
+			<!-- recipes header -->
 			<div class="header">
-				<!-- <img id = "status-bar" src = "images/top/Status Bar.png"> -->
 				<div class = "status-bar"></div>
 				<div class="top-bar">
 			  		<div class="top-container">
@@ -34,8 +34,10 @@
 		    		</div>
 			    </div>
 			</div>
+			<!-- recipes content -->
 			<div class = "content">
 				<div class = "recipes">
+					<!-- recipes page search -->
 					<div class = "search">
 						<div class="search-container remove-space">
 							<img id = "search-icon" class = "small" src = "images/Search.png">
@@ -75,9 +77,10 @@
 			    </div>
 			</div>
 		</div>
+		<!-- filters page -->
 		<div id = "filters" class = "sc">
+			<!-- filters header -->
 			<div class="header">
-				<!-- img id = "status-bar" src = "images/top/Status Bar.png"> -->
 				<div class = "status-bar"></div>
 				<div class="top-bar">
 			  		<a class="back link slideleft" page-load="recipes">
@@ -95,6 +98,7 @@
 		    		</a>
 			    </div>
 			</div>
+			<!-- filters content -->
 			<div class = "content">
 				<div class = "cuisine">
 					<div class = "category exp">
@@ -253,10 +257,12 @@
 				</div>
 			</div>
 		</div>
+		<!-- chosen recipe page -->
 		<div id = "chosen-recipe" class = "sc">
+			<!-- chosen recipe header -->
 			<div class="header">
-				<!-- <img id = "status-bar" src = "images/top/Status Bar.png"> -->
 				<div class = "status-bar"></div>
+				<!-- chosen recipe warning -->
 				<div class = "warning">
 					<div class = "toast">
 						<img id = "fix" src = "images/Cancel - Black.png">
@@ -284,7 +290,9 @@
 		    		</div>
 			    </div>
 			</div>
+			<!-- chosen recipe content -->
 			<div class = "content">
+				<!-- chosen recipe onboarding -->
 				<div class = "question">
 					<img class = "onboarding-begin" src = "images/Question Mark.png">
 					<img class = "onboarding-cancel" src="images/Cancel - Green.png">
@@ -423,6 +431,7 @@
 				<div class = "finalize-button">
 					<button class = "submit green" type = "submit">FINALIZE</button>
 				</div>
+				<!-- chosen recipe onboarding popup -->
 				<div class = "onboarding-popup first">
 					<p class = "onboarding-instructions">Here are the overall recipe details. You can adjust the number of people being served.</p>
 					<h2 class = "onboarding-button">NEXT</h2>
@@ -440,22 +449,26 @@
 				</div>
 			</div>
 		</div>
+		<!-- final recipe page -->
 		<div id = "final-recipe" class = "sc">
+			<!-- final recipe header -->
 			<div class="header">
-				<!-- <img id = "status-bar" src = "images/top/Status Bar.png"> -->
 				<div class = "status-bar"></div>
+				<!-- final recipe save toast -->
 				<div class = "save">
 					<div class = "toast">
 						<img id = "fix" src = "images/Check - Black.png">
 						<h5>Your recipe has been saved.</h5>
 					</div>
 				</div>
+				<!-- final recipe email toast -->
 				<div class = "email">
 					<div class = "toast">
 						<img id = "fix" src = "images/Check - Black.png">
 						<h5>Your recipe has been emailed.</h5>
 					</div>
 				</div>
+				<!-- final recipe share toast -->
 				<div class = "share">
 					<div class = "toast">
 						<img id = "fix" src = "images/Check - Black.png">
@@ -468,24 +481,23 @@
 			  				<h1>Recipes</h1>
 			  			</div>
 		  			</div>
-				  	<!-- <a class="back link slideright" page-load="chosen-recipe"> -->
-				  		<div class="top-container green-background sub-breadcrumbs">
-				  			<div class = "white-overlay">
-				        		<h1>Substitutions</h1>
-				        	</div>
-			    		</div>
-			    		<div class="top-container arrow">
-				  			<div id = "green-triangle">
-				  			</div>
-				  			<div id = "white-triangle">
-				  			</div>
-				  		</div>
-			  		<!-- </a> -->
+			  		<div class="top-container green-background sub-breadcrumbs">
+			  			<div class = "white-overlay">
+			        		<h1>Substitutions</h1>
+			        	</div>
+		    		</div>
+		    		<div class="top-container arrow">
+			  			<div id = "green-triangle">
+			  			</div>
+			  			<div id = "white-triangle">
+			  			</div>
+			  		</div>
 			  		<div class="top-container breadcrumbs">
 			  			<h1>Final</h1>
 		    		</div>
 			    </div>
 			</div>
+			<!-- final recipe content -->
 			<div class = "content">
 				<div class = "recipe-info">
 					<h6>Avocado Carbonara</h6>
@@ -563,6 +575,7 @@
 					<button class = "submit green" type = "submit">SHARE</button>
 				</div>
 			</div>
+			<!-- final recipe email popup -->
 			<div id = "email-popup" class = "email-popup">
 				<div class = "email-choice">
 					<div class = "email-text">
@@ -584,10 +597,12 @@
 					</div>
 				</div>
 			</div>
+			<!-- final recipe share popup -->
 			<div id = "share-popup" class = "share-popup">
 				<img class = "share-image" src = "images/Facebook Share.png">
 			</div>
 		</div>
+		<!-- tab bar -->
 		<div class = "tab-bar">
 		  	<a href="dashboard.html">
 		  		<div class="tab-container">
@@ -608,6 +623,7 @@
 	    		</div>
 	    	</a>
 		</div>
+		<!-- number pad -->
 		<div id = "numpad">
 			<div class = "done-cancel">
  				<h5 id = "cancel-people" class = "left-text-align">Cancel</h5>
@@ -615,6 +631,7 @@
  			</div>
  			<img class = "numpad-image" src="images/Numpad.png">
 		</div>
+		<!-- sub picker -->
 		<div id = "sub-picker">
 			<div class = "done-cancel">
  				<h5 id = "cancel-sub" class = "left-text-align">Cancel</h5>
