--- a/saved.html
+++ b/saved.html
@@ -6,19 +6,19 @@
 		<link rel="icon" href="images/Plate.png">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400" rel="stylesheet">
 		<link rel = "stylesheet" href="styles/style.css">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 		<script src = "js/swiped.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.js"></script>
 		<script src="js/google.fastbutton.js"></script>
  		<script src="js/jquery.google.fastbutton.js"></script>
  		<script src="https://ricostacruz.com/jquery.transit/jquery.transit.min.js" type="text/javascript"></script>
  		<script src = "js/main.js"></script>
 	</head>
+	<!-- load in edit recipe popup, edit recipe, swipe to delete -->
 	<body onLoad = "editPopUp(); edit(); swipeDelete();">
+		<!-- saved page -->
 		<div id = "saved" class = "sc selected">
+			<!-- saved header -->
 			<div class="header">
-				<!-- <img id = "status-bar" src = "images/top/Status Bar.png"> -->
 				<div class = "status-bar"></div>
 				<div class="top-bar">
 			  		<div class="top-container empty">
@@ -32,8 +32,10 @@
 		    		</div>
 			    </div>
 			</div>
+			<!-- saved content -->
 			<div class = "content">
 				<div class = "saved-recipes">
+					<!-- saved page search -->
 					<div class = "search">
 						<div class="search-container">
 							<img id = "search-icon" class = "small" src = "images/Search.png">
@@ -95,9 +97,10 @@
 			    </div>
 			</div>
 		</div>
+		<!-- saved recipe page -->
 		<div id = "saved-recipe" class = "sc">
+			<!-- saved recipe header -->
 			<div class="header">
-				<!-- <img id = "status-bar" src = "images/top/Status Bar.png"> -->
 				<div class = "status-bar"></div>
 				<div class="top-bar">
 			  		<a class="back link slideright" page-load="saved">
@@ -113,6 +116,7 @@
 		    		</div>
 			    </div>
 			</div>
+			<!-- saved recipe content -->
 			<div class = "content">
 				<div class = "recipe-info">
 					<h6>Avocado Carbonara</h6>
@@ -181,6 +185,7 @@
 					</div>
 				</div>
 			</div>
+			<!-- saved recipe edit popup -->
 			<div id = "edit-popup" class = "edit-popup">
 				<div class = "edit-choice">
 					<div class = "edit-text">
@@ -198,10 +203,8 @@
 					</div>
 				</div>
 			</div>
-			<!-- <div class = "edit-popup">
-				<img src = "images/Edit Recipe.png">
-			</div> -->
 		</div>
+		<!-- saved tab bar -->
 		<div class = "tab-bar">
 		  	<a href="dashboard.html">
 		  		<div class="tab-container">
